--- a/source/_posts/2020-01-06-ray2.markdown
+++ b/source/_posts/2020-01-06-ray2.markdown
@@ -226,13 +226,34 @@ $$
 
 
 σ是噪声的标准差，代表噪声的强度。
+
 (3) Aggregation：与第一步中一样，这里也是将这些块融合到原来的位置，只是此时加权的权重取决于维纳滤波的系数和噪声强度。
+
+![](/img/post-ml/ray11.jpg)
 
 经过最终估计之后，BM3D算法已经将原图的噪声显著地去除。可以来看一组结果：
 
 ![](/img/post-ml/ray2.jpg)
 
 该算法的主要运算量还是在相似块的搜索与匹配上，在与NL-Means同样大小的相似块和搜索区域的情况下，BM3D的算法复杂度是要高于NL-Means的，应该大概在NL-Means的3倍左右。实时处理是跑不起来了。
+
+
+### 两个算法的PSNR比较
+
+<table border="1">
+ <tr>
+    <th></th>
+    <th>NL_Mean</th>
+    <th>BM3D</th>
+</tr>        
+<tr>
+    <td>PSNR</td>
+    <td>32.09</td>
+    <td>33.67</td>
+</tr>                
+</table>
+
+NL-Means和BM3D可以说是目前效果最好的去噪算法，其中BM3D甚至宣称它可以得到迄今为止最高的PSNR。从最终的结果也可以看出来，BM3D的效果确实要好于NL-Means，噪声更少，能够更好地恢复出图像的细节。
 
 ## Noise2Noise
 
