--- a/source/_posts/2020-01-03-ray.markdown
+++ b/source/_posts/2020-01-03-ray.markdown
@@ -12,7 +12,7 @@ tags:
 
 ### 光线追踪的历史2
 
-其实光线追踪并不是近几年才有的概念，它的历史甚至可以追溯到上世纪70年代。Arthur Appel 于 1968 年提出将光线追踪算法应用于图片渲染的概念，那时还叫 ray casting，这也是后来光线追踪的基石。但一直等到 10 年后的 1979 年，*Turner Whitted*才继续在论文《*[An Improved Illumination Model for Shaded Display][i8]*》中，具体解析如何捕捉反射、阴影和反射。在光线投射的基础上，加入光与物体表面的交互。
+其实光线追踪并不是近几年才有的概念，它的历史甚至可以追溯到上世纪70年代。Arthur Appel 于 1968 年提出将光线追踪算法应用于图片渲染的概念，那时还叫 ray casting，这也是后来光线追踪的基石。但一直等到 10 年后的 1979 年，*Turner Whitted*才继续在论文*[An Improved Illumination Model for Shaded Display][i8]*中，具体解析如何捕捉反射、阴影和反射。在光线投射的基础上，加入光与物体表面的交互。
 
 
 而在电影行业中，早就用上了我们提及的光线追踪，他们已经有相当成熟的解决方案，完全可以达到以假乱真的效果，你看看漫威的科幻大片，是不是给你一种异常真实的错觉？没错，这就是光线追踪的魅力。至于为什么电影行业能这样做，原因不外乎有两个：一是有时间，他们采用的离线光线追踪，是要慢慢一帧帧渲染出来；二是有钱，通常特效工作室会使用到NVIDIA所说的渲染农场，不是一台电脑在算，而是一个个渲染集群服务器在工作，算力是你机箱里的GTX 1080 Ti成千上万倍，因此它们可以这样玩。
