--- a/source/_posts/2020-01-03-ray.markdown
+++ b/source/_posts/2020-01-03-ray.markdown
@@ -673,6 +673,8 @@ bool IntersectTriangle_01(Ray ray, float3 vert0, float3 vert1, float3 vert2,
 * [光线-三角形求交测试算法][i6]
 * [UE里的光线追踪实现][i12]
 * [蒙特卡洛 渲染方程论文][i13]
+* [Microsoft’s DirectX Ray Tracing (DXR) ][i14]
+* [NVIDIA Vulkan Ray Tracing Tutorial][i15]
 
 [i1]: http://blog.three-eyed-games.com/2018/05/03/gpu-ray-tracing-in-unity-part-1/
 [i2]: https://blog.csdn.net/qq_38275140/article/details/90345582
@@ -687,3 +689,5 @@ bool IntersectTriangle_01(Ray ray, float3 vert0, float3 vert1, float3 vert2,
 [i11]: https://www.cnblogs.com/timlly/p/11366199.html
 [i12]: https://devblogs.nvidia.com/introduction-ray-tracing-unreal-engine-422/
 [i13]: http://www.cse.chalmers.se/edu/year/2011/course/TDA361/2007/rend_eq.pdf
+[i14]: https://devblogs.microsoft.com/directx/announcing-microsoft-directx-raytracing/
+[i15]: https://developer.nvidia.com/rtx/raytracing/vkray
